objects/SBQQ__ProcessInputCondition__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProcessInputHelp</customHelpPage>
    <description>Process Input Conditions determine its visibility based on the answer of other questions.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this rule is active or inactive.</description>
        <inlineHelpText>Flag that indicates whether this rule is active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterProcessInput__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Values of this process input will determine the visibility of the current input.</description>
        <inlineHelpText>Values of this process input will determine the visibility of the current input.</inlineHelpText>
        <label>Master Process Input</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ProcessInput__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__ProcessInput__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProcessInput__c</referenceTo>
        <relationshipLabel>Process Inputs Regulated</relationshipLabel>
        <relationshipName>DependentInputs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator being used when comparing process input values.</description>
        <inlineHelpText>Select the operator to use when comparing process input values.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProcessInput__c</fullName>
        <description>Process input that owns the condition.</description>
        <inlineHelpText>Process input that owns the condition.</inlineHelpText>
        <label>Process Input</label>
        <referenceTo>SBQQ__ProcessInput__c</referenceTo>
        <relationshipLabel>Process Input Conditions</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>The value used to compare to the controlling process input.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The value used to compare to the controlling process input.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Process Input Condition</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Input Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Input Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>